--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   just_audio: ^0.9.30
   just_audio_background: ^0.0.1-beta.11
   rxdart: ^0.27.5
+  share_plus: ^6.2.0
+  share_extend: ^2.0.0
 
 dev_dependencies:
   flutter_test:
