--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   rxdart: ^0.27.5
   share_plus: ^6.2.0
   share_extend: ^2.0.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
