--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   share_plus: ^6.2.0
   share_extend: ^2.0.0
   path: ^1.8.3
+  lottie: ^2.3.0
 
 dev_dependencies:
   flutter_test:
