--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ flutter:
   assets:
     - images/
     - audio/
+    - jsons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
