Updated HBM and Added SharedPreferences

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,21 @@ dependencies:
   share_extend: ^2.0.0
   path: ^1.8.3
   lottie: ^2.3.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.13.1
+
   flutter_lints: ^2.0.0
+
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "images/logoaims.png"
 
 flutter:
 
