--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:label="AIIMS Rishikesh"
+        android:label="YogaMed"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
